Fixed button alignment

--- a/client/src/PortfolioContainer/Footer/Footer.module.css
+++ b/client/src/PortfolioContainer/Footer/Footer.module.css
@@ -18,6 +18,7 @@
   background-color: tomato;
   border-radius: 10px;
   border: none;
+  text-align: center;
 }
 
 .btn-scroll .icon:hover,
